--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.9",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.9",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.9",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "mongoose": "^8.10.0",
     "reflect-metadata": "^0.2.2",
@@ -36,17 +39,17 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.9",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.15",
+    "@swc/core": "^1.10.16",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
+    "globals": "^15.15.0",
     "jest": "^29.7.0",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
